--- a/source/layouts/standard.erb
+++ b/source/layouts/standard.erb
@@ -9,10 +9,10 @@
     <nav class="fr" style="line-height: 72px;">
 
       <div class="dn db-l">
-        <%= link_to  'The Wine', 'wines', :class => 'dark-blue link dim ph3' %>
-        <%= link_to  'The Place', 'place', :class => 'dark-blue link dim ph3' %>
-        <%= link_to  'The Family', 'family', :class => 'dark-blue link dim ph3' %>
-        <%= link_to  'The Story', 'story', :class => 'dark-blue link dim ph3' %>
+        <%= link_to  'The Wine', 'wines', :class => 'dunn-link link dim ph3' %>
+        <%= link_to  'The Place', 'place', :class => 'dunn-link link dim ph3' %>
+        <%= link_to  'The Family', 'family', :class => 'dunn-link link dim ph3' %>
+        <%= link_to  'The Story', 'story', :class => 'dunn-link link dim ph3' %>
       </div>
 
       <%#<div class="button dn-l">%>
