--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -86,7 +86,7 @@ layout: "standard"
 <section class="mv5 mw8 center">
   <div class="center measure">
     <h2 class="normal mt5 mb0">Open Space</h2>
-<p class="lh-copy">Randy and Lori’s first involvement in conservation was in 2004 with the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/",    target: :_blank, :class => 'link dark-blue dim'  %> in the form of an easement. The Sentinel Hill property consisted of 64-acres of completely forested land as you enter the town of Angwin on Howell Mountain. The next move was the Dunn’s gift of $5 million, the largest donation in the history of the Land Trust to help purchase the Wildlake Ranch a 3000 acre property up on the mountain.</p>
+<p class="lh-copy">Randy and Lori’s first involvement in conservation was in 2004 with the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/",    target: :_blank, :class => 'link dunn-link dim'  %> in the form of an easement. The Sentinel Hill property consisted of 64-acres of completely forested land as you enter the town of Angwin on Howell Mountain. The next move was the Dunn’s gift of $5 million, the largest donation in the history of the Land Trust to help purchase the Wildlake Ranch a 3000 acre property up on the mountain.</p>
 
 
 <p class="lh-copy">
