--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -26,7 +26,7 @@ layout: "standard"
 		<div class="fl w-100 w-50-l ph4">
 			<h2 class="normal mt0 tc">Howell Mountain Cabernet</h2>
       <!--  <p class="i mt0">Napa Valley: Howell Mountain AVA</p> -->
-      <p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in <%= link_to  'red wax', 'how-to-remove-the-wax.html', :class => 'dark-blue link dim' %> .</p>
+      <p class="lh-copy measure" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that it is hand dipped in <%= link_to  'red wax', 'how-to-remove-the-wax.html', :class => 'dunn-link link dim' %> .</p>
 					</div>
 
 		<div class="fl w-100 w-50-l ph4">
@@ -35,22 +35,23 @@ layout: "standard"
 		</div>
     </div>
       <p class="lh-copy measure-narrow center tc">Both of our wines are 100% Cabernet Sauvignon aged 32 months in 100% new French oak.</p>
-			<p class="tc"><%= link_to  'Tasting Notes', 'tasting-notes.html', :class => 'dark-blue link dim' %></p>
+			<p class="tc"><%= link_to  'Tasting Notes', 'tasting-notes.html', :class => 'dunn-link link dim' %></p>
 </section>
 
    <img src="/images/wine/89-howell.jpg" class="w-100">
 
    <section class="mv5">
-     <div class="mw8 center cf">
+     <div class="mw8 center cf mb4">
        <div class="fl w-100 w-50-l ph4">
          <h2 class="normal mt0 tc">Availability</h2>
-         <p class="lh-copy measure mb0">Each fall we offer our latest release to our mailing list. To subscribe to the mailing list or for inquiries about it, please contact <%= mail_to 'erin@dunnvineyards.com', "Erin", :class => 'dark-blue link dim' %>. Our wine is also are available in select retail and restaurant locations across the country.</p>
+         <p class="lh-copy measure mb0">Each fall we offer our latest release to our mailing list. Our wine is also are available in select retail and restaurant locations across the country.</p>
        </div>
        <div class="fl w-100 w-50-l ph4">
          <h2 class="normal mt0 tc">Library Wines</h2>
-         <p class="lh-copy measure mb0">We are committed to maintaining a library of all the vintages we have produced. Though not usually available, we sometimes release older vintages to our mailing list.</p>
+         <p class="lh-copy measure mb0">We are committed to maintaining a library of all the vintages we have produced. Though not available for sale, we sometimes release older vintages to our mailing list.</p>
        </div>
      </div>
+     <p class="lh-copy measure-narrow center tc">To join the mailing list, please email Erin:<br><%= mail_to 'info@dunnvineyards.com', "info@dunnvineyards.com", :class => 'dunn-link link dim' %>.</p>
    </section>
 
    <img src="/images/wine/caves.jpg" class="w-100">
