--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -2,15 +2,15 @@
 <footer class="mt5">
   <div class="mw8 center tc f3">    
 
-    <%= link_to 'Home', '/', :class => 'dib dark-blue link dim pr3' %>
-    <%= link_to 'The Wine', 'wines', :class => 'dib dark-blue link dim pr3' %>
-    <%= link_to 'The Place', 'place', :class => 'di dark-blue link dim pr3' %>
-    <%= link_to 'The Family', 'family', :class => 'di dark-blue link dim pr3' %>
-    <%= link_to 'The Story', 'story', :class => 'di dark-blue link dim' %>
+    <%= link_to 'Home', '/', :class => 'dib dunn-link link dim pr3' %>
+    <%= link_to 'The Wine', 'wines', :class => 'dib dunn-link link dim pr3' %>
+    <%= link_to 'The Place', 'place', :class => 'di dunn-link link dim pr3' %>
+    <%= link_to 'The Family', 'family', :class => 'di dunn-link link dim pr3' %>
+    <%= link_to 'The Story', 'story', :class => 'di dunn-link link dim' %>
     <div class="mt4 f6 ttu tracked">
-      <%= link_to 'Facebook', 'https://www.facebook.com/Dunn-Vineyards-173548589349104/', :class => 'di dark-blue link dim pr3' %>
-      <%= link_to 'Instagram', 'https://www.instagram.com/dunnvineyards/', :class => 'di dark-blue link dim pr3' %>
-      <%= link_to 'Contact Us', 'contact', :class => 'di dark-blue link dim' %>
+      <%= link_to 'Facebook', 'https://www.facebook.com/Dunn-Vineyards-173548589349104/', :class => 'di dunn-link link dim pr3' %>
+      <%= link_to 'Instagram', 'https://www.instagram.com/dunnvineyards/', :class => 'di dunn-link link dim pr3' %>
+      <%= link_to 'Contact Us', 'contact', :class => 'di dunn-link link dim' %>
     </div>
 <!--     <div class="mt4">
     <%= partial 'social' %>
