cleaned up scrapbook layout on family page

--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -72,63 +72,53 @@ layout: "standard"
 	
 	<!-- SCRAPBOOK ROW --> 
 
-  <div class="w-100 cf mw9 center">
-    <div class="fl w-two-thirds pr2 pr3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/fam-picnic.jpg) center;"></div>
+  <div class="w-100 cf mw9 center mb4">
+
+    <div class="fl w-two-thirds pr2 pr3-l"> 
+        <div class="cover pb416" style="background: url(/images/family/fam-picnic.jpg) center;"></div>
     </div>
-		<!--
-		<div class="fl w-50 w-25-l pl2 pr2-m ph2-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/mike-picking.jpg) center;"> </div>
-    </div>
-		-->
- 		<div class="fl w-third-l pr2 pr0-l pl3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/randy-lori.jpg) left;"> </div>
+ 		<div class="fl w-third-l pr2 pr0-l pl3-l">
+      <div class="pb416 bs-100" style="background: url(/images/family/randy-lori.jpg) top left;"> </div>
     </div> 
+
   </div>
 
 	<!-- SCRAPBOOK ROW --> 
 
-  <div class="w-100 cf center">
-    <div class="fl w-50 pr2 pr3-l mb3 mb4-l">
-      <div class="cover" style="background:black url(/images/family/fam-pumpkin.jpg) center; padding: 10rem 0;"></div>
+  <div class="w-100 cf center mb4">
+    <div class="fl w-50 pr2 pr3-l">
+      <div class="aspect-ratio aspect-ratio--8x5">
+      <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-pumpkin.jpg) center;"></div>
+      </div>
     </div>
-<!--
-		<div class="fl w-50 pl2 pr2-m ph2-l mb3 mb4-l">
-      <div class="cover pv5 pv6-ns" style="background:black url(/images/family/fam-pumpkin.jpg) center;"> </div>
-    </div>
--->
- 		<div class="fl w-50 pr2 pr0-l pl3-l mb3 mb4-l">
-      <div class="cover" style="background:black url(/images/family/fam-1984ish.jpg) left;padding: 10rem 0;"> </div>
+ 		<div class="fl w-50 pr2 pr0-l pl3-l">
+      <div class="aspect-ratio aspect-ratio--8x5">
+      <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-1984ish.jpg) left;"> </div>
+      </div>
     </div> 
   </div>
 	<!-- SCRAPBOOK ROW --> 
 
-  <div class="w-100 cf mw9 center">
-    <div class="fl w-third pr2 pr3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/mike-picking.jpg) center;"></div>
+  <div class="w-100 cf mw9 center mb4">
+    <div class="fl w-third pr2 pr3-l">
+      <div class="pb416 cover" style="background: url(/images/family/mike-picking.jpg) top center;"></div>
     </div>
-		<!--
-		<div class="fl w-50 w-25-l pl2 pr2-m ph2-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/mike-picking.jpg) center;"> </div>
-    </div>
-		-->
- 		<div class="fl w-two-thirds pr2 pr0-l pl3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/jenny-cheerleader.jpg) left;"> </div>
+ 		<div class="fl w-two-thirds pr2 pr0-l pl3-l">
+      <div class="cover pb416" style="background: url(/images/family/jenny-cheerleader.jpg) left;"> </div>
     </div> 
   </div>
 	<!-- SCRAPBOOK ROW --> 
 
-  <div class="w-100 cf center">
-    <div class="fl w-50 pr2 pr3-l mb3 mb4-l">
-      <div class="cover" style="background:black url(/images/family/fam-rlm.jpg) center; padding: 10rem 0;"></div>
+  <div class="w-100 cf center mb4">
+    <div class="fl w-50 pr2 pr3-l">
+      <div class="aspect-ratio aspect-ratio--8x5">
+      <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-rlm.jpg) left;"></div>
+      </div>
     </div>
-<!--
-		<div class="fl w-50 pl2 pr2-m ph2-l mb3 mb4-l">
-      <div class="cover pv5 pv6-ns" style="background:black url(/images/family/fam-pumpkin.jpg) center;"> </div>
-    </div>
--->
- 		<div class="fl w-50 pr2 pr0-l pl3-l mb3 mb4-l">
-      <div class="cover" style="background:black url(/images/family/fam-os.jpg) left;padding: 10rem 0;"> </div>
+ 		<div class="fl w-50 pr2 pr0-l pl3-l">
+      <div class="aspect-ratio aspect-ratio--8x5">
+      <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-os.jpg) left;"> </div>
+      </div>
     </div> 
   </div>
 
@@ -169,31 +159,24 @@ layout: "standard"
 
 <!-- SCRAPBOOK ROW --> 
 
-	<div class="w-100 cf mw9 center">
-		<div class="fl w-100 pr2 pr3-l mb3 mb4-l">
-			<div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/who.jpg) center;"></div>
+	<div class="w-100 cf mw9 center mb4">
+		<div class="fl w-100">
+			<div class="cover" style="background: url(/images/family/who.jpg) center; padding-bottom: 330px;"></div>
 		</div>
 	</div>
 	
 	<!-- SCRAPBOOK ROW --> 
-<!--
-	<div class="w-100 cf mw9 center">
-		<div class="fl w-two-thirds pr2 pr3-l mb3 mb4-l">
-			<div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/adrian.jpg) center;"></div>
-		</div>
-		<div class="fl w-third-l pr2 pr0-l pl3-l mb3 mb4-l">
-			<div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/family/alex.jpg) left;"> </div>
-		</div> 
-	</div>
--->
-	<!-- SCRAPBOOK ROW --> 
 
 	<div class="w-100 cf center">
 		<div class="fl w-50 pr2 pr3-l mb3 mb4-l">
-			<div class="cover" style="background:black url(/images/family/erin.jpg) center; padding: 10rem 0;"></div>
+      <div class="aspect-ratio aspect-ratio--8x5">
+			<div class="aspect-ratio--object  cover" style="background: url(/images/family/erin.jpg) center;"></div>
+      </div>
 		</div>
 		<div class="fl w-50 pr2 pr0-l pl3-l mb3 mb4-l">
-			<div class="cover" style="background:black url(/images/family/adrian.jpg) left;padding: 10rem 0;"> </div>
+      <div class="aspect-ratio aspect-ratio--8x5">
+			<div class="aspect-ratio--object cover" style="background: url(/images/family/adrian.jpg) left;"> </div>
+      </div>
 		</div> 
 	</div>
 
