--- a/source/stylesheets/dunn.css
+++ b/source/stylesheets/dunn.css
@@ -33,3 +33,14 @@
 label:hover {
   text-decoration: underline;
 }
+
+/* scrapbook dims */
+
+/* for use in 1/3 x 2/3 layouts */
+.pb416 {
+  padding-bottom: 416px; 
+}
+
+.bs-100 {
+  background-size: 100% !important; /* width */
+}
