--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -5,7 +5,7 @@ layout: "standard"
 ---
 
 
-<section class="mv5 mw8 center ph4 ph0-l">
+<section class="mv5 mw8 center ph4">
   
 	<!-- FAMILY BIOS -->
 
@@ -52,11 +52,11 @@ layout: "standard"
 
 
     <div class="w-100 center cf mb4-ns">
-      <div class="fl w-100 w-50-ns">
+      <div class="fl w-100 w-50-ns pr3-ns">
         <%= image_tag ' family/jenny-portrait.jpg', :class => 'w-100' %>
       </div>
 
-			<div class="fl w-100 w-50-ns ph4">
+			<div class="fl w-100 w-50-ns pl3-ns">
 				<h3 class="normal mt2-m pt6-l">Jennifer Dunn</h3>
 				<p class="lh-copy measure">It is safe to say, that we are who we are today because of the love Jenny brought to our lives. She loved riding horses with dad, playing softball along with many other things. She was attending Chico State, when she died of bacterial meningitis in 1999. Today it is a mandate at most institutions of higher learning that students be vaccinated. Jenny was one of the cases that led to this beneficial requirement that has saved many other lives.</p> 
 			</div>
@@ -124,7 +124,7 @@ layout: "standard"
 
 </section>
 
-<section class="mw8 center ph4 ph0-l">
+<section class="mw8 center ph4">
   
 	<h2 class="normal mt5 tc">The Vineyard Family</h2>
    		
