--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -68,30 +68,34 @@ layout: "standard"
 
 
 
-<section class="mw8 center">
+<section class="mw8 center ph4">
 	
 	<!-- SCRAPBOOK ROW --> 
+  <div class="w-100 cf mw9 center mb4 overflow-hidden scrapbook-height">
 
-  <div class="w-100 cf mw9 center mb4">
-
-    <div class="fl w-two-thirds pr2 pr3-l"> 
-        <div class="cover pb416" style="background: url(/images/family/fam-picnic.jpg) center;"></div>
+    <div class="fl w-70 pr3-ns"> 
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-picnic.jpg) center;"></div>
+      </div>
     </div>
- 		<div class="fl w-third pr2 pr0-l pl3-l">
-      <div class="pb416 bs-100" style="background: url(/images/family/randy-lori.jpg) top left;"> </div>
+ 		<div class="fl w-30 pl3-ns">
+      <div class="aspect-ratio aspect-ratio--5x8">
+      <div class="aspect-ratio--object cover" style="background: url(/images/family/randy-lori.jpg) top left;"> </div>
+      </div>
     </div> 
 
   </div>
 
+
 	<!-- SCRAPBOOK ROW --> 
 
   <div class="w-100 cf center mb4">
-    <div class="fl w-50 pr2 pr3-l">
+    <div class="fl w-50 pr3-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
       <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-pumpkin.jpg) center;"></div>
       </div>
     </div>
- 		<div class="fl w-50 pr2 pr0-l pl3-l">
+ 		<div class="fl w-50 pr2 pr0-ns pl3-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
       <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-1984ish.jpg) left;"> </div>
       </div>
@@ -99,23 +103,28 @@ layout: "standard"
   </div>
 	<!-- SCRAPBOOK ROW --> 
 
-  <div class="w-100 cf mw9 center mb4">
-    <div class="fl w-third pr2 pr3-l">
-      <div class="pb416 cover" style="background: url(/images/family/mike-picking.jpg) top center;"></div>
+  <div class="w-100 cf mw9 center mb4 overflow-hidden scrapbook-height">
+    <div class="fl w-30 pr3-ns">
+      <div class="aspect-ratio aspect-ratio--5x8">
+        <div class="aspect-ratio--object cover" style="background: url(/images/family/mike-picking.jpg) top center;"></div>
+      </div>
     </div>
- 		<div class="fl w-two-thirds pr2 pr0-l pl3-l">
-      <div class="cover pb416" style="background: url(/images/family/jenny-cheerleader.jpg) left;"> </div>
+    <div class="fl w-70 pr2 pr0-ns pl3-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/family/jenny-cheerleader.jpg) left;"> </div>
+      </div>
     </div> 
   </div>
+
 	<!-- SCRAPBOOK ROW --> 
 
   <div class="w-100 cf center mb4">
-    <div class="fl w-50 pr2 pr3-l">
+    <div class="fl w-50 pr3-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
       <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-rlm.jpg) left;"></div>
       </div>
     </div>
- 		<div class="fl w-50 pr2 pr0-l pl3-l">
+ 		<div class="fl w-50 pr0-ns pl3-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
       <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-os.jpg) left;"> </div>
       </div>
@@ -154,7 +163,7 @@ layout: "standard"
 
 </section>
 
-<section class="mw8 center">
+<section class="mw8 center ph4">
 	
 
 <!-- SCRAPBOOK ROW --> 
@@ -167,13 +176,13 @@ layout: "standard"
 	
 	<!-- SCRAPBOOK ROW --> 
 
-	<div class="w-100 cf center">
-		<div class="fl w-50 pr2 pr3-l mb3 mb4-l">
+	<div class="w-100 cf center mb4-ns">
+		<div class="fl w-50 pr3-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
 			<div class="aspect-ratio--object  cover" style="background: url(/images/family/erin.jpg) center;"></div>
       </div>
 		</div>
-		<div class="fl w-50 pr2 pr0-l pl3-l mb3 mb4-l">
+		<div class="fl w-50 pr0-ns pl3-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
 			<div class="aspect-ratio--object cover" style="background: url(/images/family/adrian.jpg) left;"> </div>
       </div>
@@ -183,4 +192,7 @@ layout: "standard"
 </section>
 
 
+<script>
+
+</script>
 
