more hamburger cleanup

--- a/source/layouts/full-bleed.erb
+++ b/source/layouts/full-bleed.erb
@@ -1,8 +1,8 @@
 <% wrap_layout :layout do %>
 
-    <div class="button absolute di top-2 right-2 f2 z-999">
+    <div class="di top-1 top-2-ns right-1 right-2-ns absolute">
       <!-- HAMBURGER MENU -->
-			<div id="nav-icon3" class="dn-l z-999">
+			<div id="nav-icon3" class="z-999">
 				<span></span>
 				<span></span>
 				<span></span>
@@ -11,7 +11,6 @@
     </div>
     
     <section  class="pt5" style="background: url('/images/<%= current_page.data.hero %>') top center; background-size: cover; height: 100vh;">
-
 
     <header class="mw8 center tc mb4">
       <% link_to '/', :class => "link dib"  do %>
