--- a/source/layouts/standard.erb
+++ b/source/layouts/standard.erb
@@ -1,6 +1,6 @@
 <% wrap_layout :layout do %>
 
-  <header class="mw8 center pv4 ph3 ph0-l">
+  <header class="mw8 center pv4 ph3 ph0-l tc tl-ns">
 
     <% link_to '/', :class => "link dib"  do %>
       <%= image_tag 'logo.png', :class => "pl1", :height => "72" %>
@@ -15,37 +15,15 @@
         <%= link_to  'The Story', 'story', :class => 'dunn-link link dim ph3' %>
       </div>
 
-      <%#<div class="button dn-l">%>
-        <%#<a class="btn-open" href="#"></a>%>
-      <%#</div>%>
-
-			<%#<div id="nav-icon1">%>
-				<%#<span></span>%>
-				<%#<span></span>%>
-				<%#<span></span>%>
-			<%#</div>%>
-			<%#<div id="nav-icon2">%>
-				<%#<span></span>%>
-				<%#<span></span>%>
-				<%#<span></span>%>
-				<%#<span></span>%>
-				<%#<span></span>%>
-				<%#<span></span>%>
-			<%#</div>%>
-
       <!-- HAMBURGER MENU -->
-			<div id="nav-icon3" class="dn-l z-999">
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
-			</div>
-
-			<%#<div id="nav-icon4">%>
-				<%#<span></span>%>
-				<%#<span></span>%>
-				<%#<span></span>%>
-			<%#</div>%>
+      <div class="absolute di dn-l top-1 right-1">
+        <div id="nav-icon3" class="dn-l z-999">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
 
     </nav>
 
