--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,22 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "Dunn Vineyards" %></title>
+    <title>Dunn Vineyards<% if current_page.data.title.present? %>:  
+         <%= current_page.data.title %>
+      <% end%>
+    </title>
+    
+    <meta name="description" content="Highly acclaimed Cabernet Sauvignon from Howell Mountain in the Napa Valley since 1979.">
+
+    <%= favicon_tag 'images/favicon.png' %>
 
 		<%= stylesheet_link_tag "normalize", "dunn", "hamburger" %>
 		<link rel="stylesheet" href="https://unpkg.com/tachyons@4.6.1/css/tachyons.min.css"/>
-<!--    <script
-      src="https://code.jquery.com/jquery-3.2.1.min.js"
-      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-      crossorigin="anonymous"></script> -->
 
-    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 
 		<%= javascript_include_tag  "all" %>
     <script src="/javascripts/jquery-1.11.1.min.js"></script>
-    <script src="/javascripts/jquery.finaltilesgallery.js"></script>
-		<script src="/javascripts/lightbox2.js"></script> 
 
 		<style>
 			html {
