hamburger menu styles and clickable area

--- a/source/layouts/full-bleed.erb
+++ b/source/layouts/full-bleed.erb
@@ -1,6 +1,6 @@
 <% wrap_layout :layout do %>
 
-    <div class="di top-1 top-2-ns right-1 right-2-ns absolute">
+    <div id="full-bleed" class="di top-1 top-2-ns right-1 right-2-ns absolute">
       <!-- HAMBURGER MENU -->
 			<div id="nav-icon3" class="z-999">
 				<span></span>
