--- a/source/stylesheets/hamburger.css
+++ b/source/stylesheets/hamburger.css
@@ -9,10 +9,8 @@
 
 #nav-icon3 {
   width: 24px;
-  /*width: 60px;*/
-  /*height: 45px;*/
+  height: 45px;
   position: relative;
-  /*margin: 50px auto;*/
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
@@ -29,7 +27,8 @@
   position: absolute;
   height: 2px;
   width: 100%;
-  background: #d3531a;
+  /* same as base font color */
+  background: rgba( 0, 0, 0, .7 );
   border-radius: 9px;
   opacity: 1;
   left: 0;
@@ -49,12 +48,10 @@
 
 #nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
   top: 8px;
-  /*top: 18px;*/
 }
 
 #nav-icon3 span:nth-child(4) {
   top: 16px;
-  /*top: 36px;*/
 }
 
 #nav-icon3.open span {
@@ -63,7 +60,6 @@
 
 #nav-icon3.open span:nth-child(1) {
   top: 18px;
-  /*top: 18px;*/
   width: 0%;
   left: 50%;
 }
@@ -84,7 +80,6 @@
 
 #nav-icon3.open span:nth-child(4) {
   top: 8px;
-  /*top: 18px;*/
   width: 0%;
   left: 50%;
 }
