new copy for story page

--- a/source/story.html.erb
+++ b/source/story.html.erb
@@ -9,8 +9,7 @@ hero: "story/harvest.jpg"
 <section class="mv5 mw8 center">
   <div class="measure lh-copy center">
     <h2 class="normal mt5 mb0">Getting Started</h2>
-    <p>After making wine at Caymus for a few years, Randy decided it was time to strike out on his own. In 1978 he and Lori purchased the “Trailer Vinyard” and began farming 51/2 acres of Cabernet in their “free time”.   The next year Randy harvested 9 tons of fruit from the Trailer and Frank vineyards and then bought another 3 tons from Beatty.  When all was said and done he had 660 cases of 750mls, 28 cases of magnums, and 53 five liter bottles.</p>
-    <p>Dunn Vineyards begins &hellip;</p>
+    <p>In 1978 Randy and Lori purchased a 14 acre parcel in Angwin. The land had just about 5 acres of Cabernet vines planted on it. Working full time as a winemaker in Rutherford, he, Lori and Mike tended to the vines in the evening and on the weekend. The neighboring vineyard was being neglected and Randy agreed to farm it and buy the fruit starting in 1979. This property was owned by Harry Frank who did not live locally. That first harvest yielded 9 tons of fruit from these two vineyards. Randy purchased an additional 3 tons from the Beatty Ranch and Dunn Vineyards was underway.</p>
   </div>
 </section>
 
@@ -32,12 +31,47 @@ hero: "story/harvest.jpg"
 
 <section class="mv5 mw8 center">
   <div class="measure lh-copy center">
-    <h2 class="normal mt5 mb0">Going Legit</h2>
-    <p>Things happened quickly after that. 1981 marked the bonding of the  winery in Angwin. And by 1984 the ATF approved the Howell Mountain AVA.   [[ talk about living in the White House — was there a trailer before that?]</p>
-    <p>While they were getting the winery off the ground, the Dunns were also building a family.  Both Jenny and Kristina were born as in these years.  As the family outgrew the Western Union building, they started building their new family home on the property.  After moving into “the brown house”, the  White House became the dedicated spot for Dunn Vineyards.  Soon after, Randy had caves dug into the mountain beneath the office.</p>
+    <h2 class="normal mt5 mb0">Making it Official</h2>
+    <p>Everything picked up speed after that. Randy, Lori, Mike and baby Jennifer moved onto the property that today is the winery. It was officially bonded as a winery in 1981. The ATF approved Howell Mountain as a sub AVA of the Napa Valley and it became official in January of 1984. The family had grown and Lori was raising 2 young daughters and a teenage son, while Randy was still busy at work down Valley. All work for the family business was still relegated to evenings and weekends. In '85 Lori finally had her new house and Randy left his job.</p> 
   </div>
 </section>
 
+<section class="mv5 mw8 center">
+  <div class="measure lh-copy center">
+    <h2 class="normal mt5 mb0">Full Speed Ahead</h2>
+    <p>By the end of the '80's Dunn Vineyards had become a successful operation. Randy was consulting for other wineries and selling out all of his wine. In 1989 he had run out of room to store barrels and he tunneled into the mountain to make more space. </p> 
+  </div>
+</section>
+
+<section class="mv5 mw8 center">
+  <div class="measure lh-copy center">
+    <h2 class="normal mt5 mb0">The Kids Get Back Involved</h2>
+    <p>Mike came back to help out part time in 1999. As the cellar grunt it was a good three years before the winery was his full time job. Kristina graduated from Cal Poly with a degree in wine making and viticulture and by 2005 they were both taking direction from Randy. </p> 
+  </div>
+</section>
+
+
+<section class="mv5 mw8 center">
+  <div class="measure lh-copy center">
+    <h2 class="normal mt5 mb0">The Third Generation</h2>
+    <p>Kristina's girls are a little young yet, but they tour the vineyards eating wild blackberries, testing grape ripeness and visiting uncle Mike. Mike's son Alex has been helping out with bottling for the past several years and 2017 was his first full harvest. So far it looks good for the Dunn clan to continue farming this land.</p> 
+  </div>
+</section>
+
+<section class="mv5 mw8 center">
+  <div class="measure lh-copy center">
+    <h2 class="normal mt5 mb0">Above the Fog</h2>
+    <p>There are some distinct benefits to being above 1400 feet in elevation. We tend to see more sunshine each day and the heat tends to be more moderate. 
+    Spring starts later for us as the weather is much cooler up here in Spring and Winter. We frequently have frost pressures around the time of bud break, which can carry through into flowering. In 2008 for example, four consecutive days in April brought 19 degree temperatures and we never saw about half of our crop. Our yields average about 2 tons an acre (which is really low) but the cool, wet vintages do not have the same negative effects that come with being on the valley floor. </p> 
+  </div>
+</section>
+
+<section class="mv5 mw8 center">
+  <div class="measure lh-copy center">
+    <h2 class="normal mt5 mb0">Today</h2>
+    <p>We farm about 35 acres of Cabernet Sauvignon on the property. This is a manageable size for us to remain in the drivers seat for all farming and wine making operations.</p>
+  </div>
+</section>
 
 <section class="mw8 center">
 	
@@ -76,14 +110,6 @@ hero: "story/harvest.jpg"
 
 </section>
 
-<section class="mv5 mw8 center">
-  <div class="measure lh-copy center">
-    <h2 class="normal mt5 mb0">Second Generation</h2>
-    <p class="lh-copy measure">By 2005 the second generation of Dunns stepped up to the plate.  While Mike had been working at the vineyard for years, he was now full time.  Fresh out of Cal Poly with a degree in Wine and Viticulture, Kristina takes over marketing.  With Mike’s son Alex helping out in the cellar, we wonder when the third generation of Dunns will become full time winemakers.</p>
-  </div>
-</section>
-
-
 
 <section class="mw8 center">
 	
@@ -114,14 +140,6 @@ hero: "story/harvest.jpg"
 
 </section>
 
-<section class="mv5 mw8 center">
-  <div class="measure lh-copy center">
-    <h2 class="normal mt5 mb0">Highs and Lows (?)</h2>
-    <p class="lh-copy measure">The mountain and the climate always keep things interesting.  1981 brought four days of 19degree lows which cut that year’s harvest in half.  The latest harvest was in 2011 — picking didn’t start until October 29th.  Some years we have a special release like when we retired the Trailer Vineyard and grafted [?] onto the existing rootstock in 2016.
-    </p>
-  </div>
-</section>
-
 
 <section class="mw8 center">
 	
@@ -138,13 +156,6 @@ hero: "story/harvest.jpg"
 
 </section>
 
-<section class="mv5 mw8 center">
-  <div class="measure lh-copy center">
-    <h2 class="normal mt5 mb0">The Future</h2>
-    <p classs="i">We have no intentions of increasing our production or growing the brand. The current size of our farm and its production allows us to be involved in all aspects. If it were any bigger the work would become much more administrative, managerial not to mention the amount of effort to sell the wine would increase exponentially and for us that’s not the fun part.</p>
-    </p>
-  </div>
-</section>
 
 
 <section class="mw8 center">
