story page photos and layoutw

--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -70,7 +70,7 @@ layout: "standard"
 
 <section class="mw8 center ph4">
 	
-	<!-- SCRAPBOOK ROW --> 
+	<!-- SCRAPBOOK ROW 70/30 --> 
   <div class="w-100 cf mw9 center mb4 overflow-hidden scrapbook-height">
 
     <div class="fl w-70 pr3-ns"> 
@@ -87,7 +87,7 @@ layout: "standard"
   </div>
 
 
-	<!-- SCRAPBOOK ROW --> 
+	<!-- SCRAPBOOK ROW 50/50 --> 
 
   <div class="w-100 cf center mb4">
     <div class="fl w-50 pr3-ns">
@@ -101,7 +101,9 @@ layout: "standard"
       </div>
     </div> 
   </div>
-	<!-- SCRAPBOOK ROW --> 
+
+
+  <!-- SCRAPBOOK ROW 30/70 --> 
 
   <div class="w-100 cf mw9 center mb4 overflow-hidden scrapbook-height">
     <div class="fl w-30 pr3-ns">
@@ -116,7 +118,7 @@ layout: "standard"
     </div> 
   </div>
 
-	<!-- SCRAPBOOK ROW --> 
+	<!-- SCRAPBOOK ROW 50/50 --> 
 
   <div class="w-100 cf center mb4">
     <div class="fl w-50 pr3-ns">
