--- a/source/story.html.erb
+++ b/source/story.html.erb
@@ -13,20 +13,20 @@ hero: "story/harvest.jpg"
   </div>
 </section>
 
-<section class="mw8 center">
+
+
+<section class="mw8 center ph4">
 	
-	<!-- SCRAPBOOK ROW --> 
+	<!-- SCRAPBOOK ROW 100 --> 
 
-  <div class="w-100 cf center">
-    <div class="fl w-two-thirds pr2 pr3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/dont-drink-and-drive.jpg) center;"></div>
-    </div>
- 		<div class="fl w-third-l pr2 pr0-l pl3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/randy-grapes.jpg) left;"> </div>
-    </div> 
+  <div class="w-100 cf center mb4">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background:black url(/images/story/dont-drink-and-drive.jpg) center;"></div>
+      </div>
   </div>
-
+  
 </section>
+
 
 
 <section class="mv5 mw8 center">
@@ -36,11 +36,72 @@ hero: "story/harvest.jpg"
   </div>
 </section>
 
+<section class="mw8 center ph4">
+
+  <!-- SCRAPBOOK ROW 50/50 --> 
+
+  <div class="w-100 cf center mb4">
+    <div class="fl w-50 pr3-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/story/white-house.jpg) center;"></div>
+      </div>
+    </div>
+ 		<div class="fl w-50 pr2 pr0-ns pl3-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/story/brown-house.jpg) left;"> </div>
+      </div>
+    </div> 
+  </div>
+
+  <!-- SCRAPBOOK ROW 50/50 --> 
+
+  <div class="w-100 cf center mb4">
+    <div class="fl w-50 pr3-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/story/jenny-tractor.jpg) center;"></div>
+      </div>
+    </div>
+ 		<div class="fl w-50 pr2 pr0-ns pl3-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/story/fire-truck-water-fight.jpg) left;"> </div>
+      </div>
+    </div> 
+  </div>
+
+
+</section>
+
 <section class="mv5 mw8 center">
   <div class="measure lh-copy center">
     <h2 class="normal mt5 mb0">Full Speed Ahead</h2>
     <p>By the end of the '80's Dunn Vineyards had become a successful operation. Randy was consulting for other wineries and selling out all of his wine. In 1989 he had run out of room to store barrels and he tunneled into the mountain to make more space. </p> 
   </div>
+</section>
+
+
+<section class="mw8 center ph4">
+
+	<!-- SCRAPBOOK ROW 100 --> 
+
+  <div class="w-100 cf center mb4">
+    <%= image_tag 'story/caves-pano.jpg' %> 
+  </div>
+
+  <!-- SCRAPBOOK ROW 50/50 --> 
+
+  <div class="w-100 cf center mb4">
+    <div class="fl w-50 pr3-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/story/airplane.jpg) center;"></div>
+      </div>
+    </div>
+ 		<div class="fl w-50 pr2 pr0-ns pl3-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/story/randy-truck.jpg) left;"> </div>
+      </div>
+    </div> 
+  </div>
+
 </section>
 
 <section class="mv5 mw8 center">
@@ -51,18 +112,72 @@ hero: "story/harvest.jpg"
 </section>
 
 
+<section class="mv5 mw8 center ph4">
+  <!-- SCRAPBOOK ROW 50/50 --> 
+
+  <div class="w-100 cf center mb4">
+    <div class="fl w-50 pr3-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/story/randy-mike.jpg) center;"></div>
+      </div>
+    </div>
+ 		<div class="fl w-50 pr2 pr0-ns pl3-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/story/kristina.jpg) left;"> </div>
+      </div>
+    </div> 
+  </div>
+</section>
+
+
 <section class="mv5 mw8 center">
   <div class="measure lh-copy center">
     <h2 class="normal mt5 mb0">The Third Generation</h2>
     <p>Kristina's girls are a little young yet, but they tour the vineyards eating wild blackberries, testing grape ripeness and visiting uncle Mike. Mike's son Alex has been helping out with bottling for the past several years and 2017 was his first full harvest. So far it looks good for the Dunn clan to continue farming this land.</p> 
   </div>
+  
 </section>
+
+<section class="mv5 mw8 center ph4">
+  <!-- SCRAPBOOK ROW 50/50 --> 
+
+  <div class="w-100 cf center mb4">
+    <div class="fl w-50 pr3-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/story/alex-kristina-stompin.jpg) center;"></div>
+      </div>
+    </div>
+ 		<div class="fl w-50 pr2 pr0-ns pl3-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/story/alex.jpg) left;"> </div>
+      </div>
+    </div> 
+  </div>
+</section>
+      
 
 <section class="mv5 mw8 center">
   <div class="measure lh-copy center">
     <h2 class="normal mt5 mb0">Above the Fog</h2>
     <p>There are some distinct benefits to being above 1400 feet in elevation. We tend to see more sunshine each day and the heat tends to be more moderate. 
     Spring starts later for us as the weather is much cooler up here in Spring and Winter. We frequently have frost pressures around the time of bud break, which can carry through into flowering. In 2008 for example, four consecutive days in April brought 19 degree temperatures and we never saw about half of our crop. Our yields average about 2 tons an acre (which is really low) but the cool, wet vintages do not have the same negative effects that come with being on the valley floor. </p> 
+  </div>
+</section>
+
+<section class="mv5 mw8 center ph4">
+  <!-- SCRAPBOOK ROW 50/50 --> 
+
+  <div class="w-100 cf center mb4">
+    <div class="fl w-50 pr3-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/story/randy-gardening.jpg) center;"></div>
+      </div>
+    </div>
+ 		<div class="fl w-50 pr2 pr0-ns pl3-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/story/mike-shop.jpg) left;"> </div>
+      </div>
+    </div> 
   </div>
 </section>
 
@@ -73,104 +188,9 @@ hero: "story/harvest.jpg"
   </div>
 </section>
 
-<section class="mw8 center">
-	
-	<!-- SCRAPBOOK ROW --> 
+<section class="mv5 mw8 center">
 
-  <div class="w-100 cf center">
-    <div class="fl w-two-thirds pr2 pr3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/white-house.jpg) center;"></div>
-    </div>
- 		<div class="fl w-third-l pr2 pr0-l pl3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/land-historical.jpg) left;"> </div>
-    </div> 
-  </div>
-
-	<!-- SCRAPBOOK ROW --> 
-
-  <div class="w-100 cf center">
-    <div class="fl w-50 pr2 pr3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/airplane.jpg) center;"></div>
-    </div>
- 		<div class="fl w-50-l pr2 pr0-l pl3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/fire-truck-water-fight.jpg) center;"> </div>
-    </div> 
-  </div>
-
-  <div class="w-100 cf center">
-    <div class="fl w-50 pr2 pr3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/working.jpg) center;"></div>
-    </div>
- 		<div class="fl w-50-l pr2 pr0-l pl3-l mb3 mb4-l">
-      <%#<div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/randy-caves.jpg) center;"> </div>%>
-      <div class="cover pv5 pv6-m pv7-l bg-gray"><p class="white i v-mid tc">Bonded in 1981</p> </div>
-
-    </div> 
-  </div>
-
-</section>
-
-
-<section class="mw8 center">
-	
-	<!-- SCRAPBOOK ROW --> 
-
-  <div class="w-100 cf center">
-    <div class="fl w-50 pr2 pr3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/alex-kristina-stompin.jpg) center;"></div>
-    </div>
- 		<div class="fl w-50 pr2 pr0-l pl3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/randy-truck.jpg) center;"> </div>
-    </div> 
+  <div class="w-100 cf center mb4">
+    <%= image_tag 'story/end.jpg' %> 
   </div>
 </section>
-
-<section class="mw8 center">
-	
-	<!-- SCRAPBOOK ROW --> 
-
-  <div class="w-100 cf center">
-    <div class="fl w-two-thirds pr2 pr3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/dont-drink-and-drive.jpg) center;"></div>
-    </div>
- 		<div class="fl w-third-l pr2 pr0-l pl3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/randy-grapes.jpg) left;"> </div>
-    </div> 
-  </div>
-
-</section>
-
-
-<section class="mw8 center">
-	
-	<!-- SCRAPBOOK ROW --> 
-
-  <div class="w-100 cf center">
-    <div class="fl w-two-thirds pr2 pr3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/dont-drink-and-drive.jpg) center;"></div>
-    </div>
- 		<div class="fl w-third-l pr2 pr0-l pl3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/randy-grapes.jpg) left;"> </div>
-    </div> 
-  </div>
-
-</section>
-
-
-
-<section class="mw8 center">
-	
-	<!-- SCRAPBOOK ROW --> 
-
-  <div class="w-100 cf center">
-    <div class="fl w-two-thirds pr2 pr3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/dont-drink-and-drive.jpg) center;"></div>
-    </div>
- 		<div class="fl w-third-l pr2 pr0-l pl3-l mb3 mb4-l">
-      <div class="cover pv5 pv6-m pv7-l" style="background:black url(/images/story/randy-grapes.jpg) left;"> </div>
-    </div> 
-  </div>
-
-</section>
-
-
